19990913-12:00 GMT+1 Victor Szel <info@szelvesz.hu>

  * tests/working/rtl_test.prg
    + ASORT() tests added.
    ! Fixed an expected result for aScan() was 12 instead of 4.
    ! CHR() tests fixed to avoid the Clipper compiler expression optimizer.
  * source/rtl/asort.prg
    ! Parameter checking fixed and streamlined again.
    ! Fixed when sorting a given range of the array.
    ! Fixed when the codeblock is not returning a logical type. This is not
      Clipper compatible, but Clippers behaviour is not defined for this case,
      and seems buggy.
    % One variable eliminated from QuickSort()
    + Formatted.
    ; Results checked against Clipper

19990913-10:00 GMT+1 Victor Szel <info@szelvesz.hu>

  * include/compiler.h
    include/hberrors.h
    source/compiler/harbour.l
    source/compiler/harbour.y
    source/compiler/gen*.c
    source/hbpp/hbpp.c
    source/hbpp/hbppint.c
    source/hbpp/stdalone/hbpp.c
    ! Fixed a GPF when the .PPO file could not be created.
    * The compiler screen output made more Clipper like.
    * Some error messages made Clipper like.
    + Some printf()s changed to use GenError() instead.
    + Added www site name and Copyright notice to the header.
    * lPpo -> _bPPO variable name change.
  * source/vm/hvm.c
    + Some casts added.

19990913-01:40 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/memvars.c
    ! __MVSAVE() - Pedantic fix to the saved format of DATE type.
    ! __MVSAVE() - Made it bug compatible with Clipper, for DOUBLE numeric
      types with no decimals, Clipper adds one to the saved width, which is
      wrong, since at restore the width will be incorrect (one more than it
      should be), you can check this with the value 5000000000 for example.
      HARBOUR_STRICT_CLIPPER_COMPATIBILITY added here, right now the bug fix
      in enabled.
  * source/rtl/asort.prg
    ! More parameter checkings added.
  * tests/broken/numform.prg